--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   "devDependencies": {
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
-    "vuepress": "^1.0.0-alpha.47",
+    "vuepress": "^1.2.0",
     "vuepress-plugin-canonical": "^1.0.0",
     "vuepress-plugin-sitemap": "https://github.com/ekoeryanto/vuepress-plugin-sitemap#master"
   },
   "dependencies": {
     "@vuepress/plugin-active-header-links": "^1.0.2",
     "@vuepress/plugin-blog": "^1.2.4",
-    "@vuepress/plugin-last-updated": "^1.0.2",
     "@vuepress/plugin-google-analytics": "^1.0.0-rc.1",
+    "@vuepress/plugin-last-updated": "^1.0.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.26",
