--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
   - "$HOME/.npm"
 script:
   - npm run docs:build
-  - echo 'sarahambs.dk' > CNAME
+  - echo 'sarahambs.dk' > docs/.vuepress/dist/CNAME
 deploy:
   provider: pages
   skip-cleanup: true
